ui/views/controls/tree/tree_view.cc
@@ -729,6 +729,8 @@ void TreeView::LayoutEditor() {
                    -(empty_editor_size_.height() - font_list_.GetHeight()) / 2);
   // Give a little extra space for editing.
   row_bounds.set_width(row_bounds.width() + 50);
+  // Scroll as necessary to ensure that the editor is visible.
+  ScrollRectToVisible(row_bounds);
   editor_->SetBoundsRect(row_bounds);
   editor_->Layout();
 }
